# k-rlm

./: README.md  docker-compose.yml  simple_use_raptor.md
backend/: .env.example  .gitignore  Dockerfile  RAPTOR_USAGE.md  README.md  note.txt  pyproject.toml
backend/app/: config.py  main.py  ollama_client.py  prompts.py  schemas.py
backend/app/routers/: graph.py  health.py  inference.py  models.py
backend/app/services/: community_summarizer.py  document_processor.py  neo4j_client.py  qdrant_client.py  raptor_service.py
backend/docs/: 01-fastapi-lifespan-fix.md  02-env-config-update.md  03-json-sanitization.md  04-chunking-optimization.md  05-community-pipeline.md  06-graph-endpoints.md  07-tests.md  08-frontend-adjustments.md  09-timeout-concurrency-fix.md  10-rlm-pipeline.md  FRONTEND_ADJUSTMENTS.md  README.md
backend/tests/: test_community_summarizer.py  test_document_processor.py  test_graph_router.py  test_inference.py  test_neo4j_client.py  test_ollama_client.py  test_qdrant_client.py
docs/: Flows.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: Sidebar.jsx  TopHeader.jsx
frontend/src/components/ui/: ResultPanel.jsx  SelectField.jsx  StatCard.jsx  StepCard.jsx
frontend/src/components/views/: ChatTestView.jsx  EvalView.jsx  GraphView.jsx  PlaygroundView.jsx
frontend/src/data/: constants.js
