[tool.poetry]
name        = "krlm-backend"
version     = "0.1.0"
description = "K-RLM Architecture — backend inference & evaluation service"
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"
packages    = [{ include = "app" }]

[tool.poetry.dependencies]
python         = "^3.11"
fastapi        = "^0.111.0"
uvicorn        = { extras = ["standard"], version = "^0.29.0" }
httpx          = "^0.27.0"         # async client để gọi Ollama REST
pydantic       = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv  = "^1.0.1"
tenacity       = "^8.3.0"          # retry logic cho Ollama
langsmith      = "^0.1.75"         # telemetry / tracing
python-multipart = "^0.0.9"        # for file upload handling
kreuzberg      = { extras = ["vision", "paddleocr"], version = ">=4.4.4" }
paddleocr      = ">=2.7.0"
onnxruntime    = ">=1.15.0"
opencv-python-headless = ">=4.0.0"
neo4j          = "^5.20.0"         # GraphDB driver
qdrant-client  = "^1.9.0"          # VectorDB client

[tool.poetry.group.dev.dependencies]
pytest         = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx          = "^0.27.0"         # TestClient
ruff           = "^0.4.4"
mypy           = "^1.10.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select      = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict         = false
ignore_missing_imports = true
